# image-drawer-2d

./: README.md
src/: CMakeCompileFlags.txt  CMakeLists.txt  CMakeUtils.txt
src/cmake/: Findpng++.cmake
src/imgdraw2d/: CMakeLists.txt
src/imgdraw2d/include/imgdraw2d/: Drawer2D.h  Geometry.h  Image.h  ImageComparator.h  Painter.h
src/imgdraw2d/src/: CMakeLists.txt  Drawer2D.cpp  Findimgdraw2d.cmake  Image.cpp  ImageComparator.cpp  Painter.cpp
src/imgdraw2d/tests/: CMakeLists.txt  Drawer2DEigen_test.cpp  Drawer2D_test.cpp  Geometry_test.cpp  ImageComparator_test.cpp  Image_test.cpp  ImgTestUtils.h  Painter_test.cpp  Point_test.cpp  Utils.h  main.cpp  run_tests.sh.in
src/testcasedrawer/: CMakeLists.txt
src/testcasedrawer/include/: Drawer2D.h  Geometry.h  Image.h  ImageComparator.h  ImageDrawer.h  ImageLoader.h  Painter.h  PngDrawer.h
src/testcasedrawer/include/imgdraw2d/: ImageComparator.h  Painter.h
src/testcasedrawer/src/: CMakeLists.txt  Drawer2D.cpp  Geometry.cpp  Image.cpp  ImageComparator.cpp  ImageDrawer.cpp  ImageLoader.cpp  Painter.cpp  PngDrawer.cpp
src/testcasedrawer/tests/: CMakeLists.txt  Drawer2D_test.cpp  Geometry_test.cpp  ImageComparator_test.cpp  ImageDrawer_test.cpp  ImageLoader_test.cpp  Image_test.cpp  Painter_test.cpp  PngDrawer_test.cpp  Point_test.cpp  main.cpp
